# BIOSTAT821_Clinical_Data_QC_Library

./: README.md  pyproject.toml
clinical_qc/: __init__.py  cli.py  config.py  models.py  pipeline.py
clinical_qc/checks/: __init__.py  coding.py  dates.py  missingness.py  outliers.py  ranges.py
clinical_qc/report/: __init__.py  charts.py  export.py  summary.py
examples/: sample_clinical_data.csv  sample_config.yaml
output/: issues.csv  issues.html  report.html
tests/: test_pipeline.py
