[project]
name = "clinical-qc"
version = "0.1.0"
description = "Clinical data quality control and HTML reporting library"
authors = [{ name = "Your Name" }]
requires-python = ">=3.9"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]